--- a/New Unity Project/Assembly-CSharp.csproj
+++ b/New Unity Project/Assembly-CSharp.csproj
@@ -67,6 +67,8 @@
     <Compile Include="Assets\Script\Character\CharacterInfo.cs" />
     <Compile Include="Assets\Script\Character\MonsterInfo.cs" />
     <Compile Include="Assets\Script\Character\PlayerInfo.cs" />
+    <Compile Include="Assets\Script\GameManager.cs" />
+    <Compile Include="Assets\Script\UI\LineManager.cs" />
     <None Include="Assets\Asset_Imported\FreePixelMob\ReadMe.txt" />
     <None Include="Assets\Asset_Imported\Pixel Font - Tripfive\_README.txt" />
     <Reference Include="Unity.Timeline.Editor">
